--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -6,7 +6,7 @@ HomePage.css
     padding: 20px;
 }
 
-.filter-sidebar {
+/* .filter-sidebar {
     background-color: white;
     border-radius: 10px;
     padding: 20px;
@@ -27,7 +27,7 @@ HomePage.css
     border-radius: 6px;
     padding: 10px;
     background: transparent;
-}
+} */
 
 .product-area {
     padding-left: 30px;
@@ -116,3 +116,59 @@ HomePage.css
     font-weight: 600;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+
+
+.filter-sidebar {
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-right: 1px solid #ddd;
+    min-height: 100vh;
+}
+
+.filter-header {
+    padding: 10px 12px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background 0.3s ease;
+}
+
+.filter-header:hover {
+    background-color: #f0f0f0;
+}
+
+.clear-filter-btn {
+    margin-top: 15px;
+    padding: 8px 8px;
+    background-color: #0a0a0a;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+}
+
+.clear-filter-btn:hover {
+    background-color: #d9363e;
+}
+
+.filter-sidebar .ant-checkbox-wrapper,
+.filter-sidebar .ant-radio-wrapper {
+    padding-left: 10px;
+    margin-bottom: 6px;
+}
+
+
+
+
+
+  
